# site-mark

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  NEXT_AGENT_PROMPT.md  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  flutter_launcher_icons.yaml  pubspec.yaml
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-4-report.md
android/app/: build.gradle.kts
docs/: capture-processing-storage.md  current-product-architecture.md  decision-records.md  record-watermark-settings.md  release-checklist.md  verification-v0.1.0-alpha.md  verification-v0.2.0-alpha.md
integration_test/: performance_test.dart  simple_test.dart
lib/: app.dart  main.dart  motion.dart
lib/background/: capture_background_scheduler.dart
lib/data/: app_database.dart  app_database.g.dart  conditional_polling_stream.dart
lib/domain/: app_links.dart  app_storage_usage.dart  capture_display_name.dart  capture_file_info.dart  capture_filter.dart  capture_status.dart  capture_summary_filter.dart  original_photo_state.dart  photo_number.dart  project_name.dart
lib/l10n/: app_strings.dart
lib/platform/: capture_form_draft_store.dart  external_link_service.dart  (+6 more)
pigeons/: system_api.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: image_core.rs  mod.rs
rust/tests/: core_test.rs
rust_builder/: pubspec.yaml
test/: app_lifecycle_test.dart  widget_test.dart
tool/: generate_launcher_icon.py  generate_launcher_icons.ps1  test_generate_launcher_icon.py  test_verify_launcher_icon_resources.py  verify_launcher_icon_resources.py
(+113 files in other folders)
