[package]
name = "sitemark_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
ab_glyph = "0.2.32"
csv = "1.4.0"
flutter_rust_bridge = "=2.12.0"
hex = "0.4.3"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
imageproc = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dev-dependencies]
tempfile = "3.27.0"
